--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {  
-  "name": "shawnconn/logintoboggan",
+  "name": "newzeal/logintoboggan",
   "type": "drupal-module",
   "description": "",
   "keywords": ["Drupal"],
